# backend

./: pyproject.toml
alunos/: admin.py  models.py  serializers.py  views.py
alunos/migrations/: 0001_initial.py  0002_cidade.py  0003_rename_estado_cidade_estado_endereço.py  0004_alter_endereço_cep_alter_endereço_numero.py  0005_alter_endereço_cep_alter_endereço_numero.py  0006_aluno.py
config/: settings.py  urls.py
config/config/: settings.py
